# pilaf

./: README.md  pyproject.toml
pilaf/: pilaf.py
shepy/: __init__.py  shepy.py
tests/: test_pilaf.py  test_shepy.py
